--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import "tailwindcss";
+
+@theme {
+  --shadow-custom: 0px 10px 30px 0px rgba(17, 38, 146, 0.05);
+  --shadow-button: 0px 2px 4px 0px rgba(58, 87, 232, 0.3)
+  --spacing-custom: 175%;
+  --color-custom: rgb(238, 238, 238);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #f5f6fa;
 }
